Deploy gallery jumping photos fix

--- a/src/styles/components/_portfolio.scss
+++ b/src/styles/components/_portfolio.scss
@@ -329,6 +329,10 @@
   margin: 24px;
 }
 
+.f-thumbs__slide {
+  box-sizing: border-box;
+}
+
 .f-button.is-prev {
   content: url(../../assets/images/gallery-prev.svg);
   padding: 10px;
